--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 30px auto; font-family: Arial, Helvetica, sans-serif; background-color: #fefefe; }
+.scroll-hide { overflow: hidden; }
+
