--- a/src/app/image-info/image-info.component.html
+++ b/src/app/image-info/image-info.component.html
@@ -1,22 +1,34 @@
 <!-- Modal -->
-<div class="modal fade" [ngClass]="{'show': isModalOpen, 'modal-padding': isModalOpen}" [ngStyle]="{'display': isModalOpen ? 'block' : 'none' }" id="exampleModalCenter"
-    tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" [ngClass]="{'show': isModalOpen, 'modal-padding': isModalOpen}"
+    [ngStyle]="{'display': isModalOpen ? 'block' : 'none' }" id="exampleModalCenter" tabindex="-1" role="dialog"
+    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+                <h5 class="modal-title">{{title}}</h5>
                 <button type="button" class="close" (click)="closeModal()" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
             </div>
             <div class="modal-body">
-                ...
+                <div class="card col-12">
+                    <img [src]="imgSrc" class="card-img-top" [alt]="title">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">Owner</div>
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">{{owner}}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">Flickr URL</div>
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">{{url}}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">Photo taken</div>
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">{{captureDate}}</div>
+                    </div>
+                </div>
             </div>
-            <!-- <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div> -->
         </div>
     </div>
 </div>
-<div class="modal-backdrop fade" [ngClass]="{'show': isModalOpen}" (click)="closeModal()" [ngStyle]="{'display': isModalOpen ? 'block' : 'none' }"></div>
+<div class="modal-backdrop fade" [ngClass]="{'show': isModalOpen}" (click)="closeModal()"
+    [ngStyle]="{'display': isModalOpen ? 'block' : 'none' }"></div>
