chore: Update to environment.prod

--- a/src/app/image-info/image-info.component.html
+++ b/src/app/image-info/image-info.component.html
@@ -4,29 +4,31 @@
     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">{{title}}</h5>
-                <button type="button" class="close" (click)="closeModal()" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="card col-12">
-                    <img [src]="imgSrc" class="card-img-top" [alt]="title">
-                    <div class="row">
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">Owner</div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">{{owner}}</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">Flickr URL</div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">{{url}}</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">Photo taken</div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">{{captureDate}}</div>
+            <section>
+                <div class="modal-header">
+                    <h5 class="modal-title">{{title}}</h5>
+                    <button type="button" class="close" (click)="closeModal()" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="card col-12">
+                        <img [src]="imgSrc" class="card-img-top" [alt]="title">
+                        <div class="row">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">Owner</div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">{{owner}}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">Flickr URL</div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">{{url}}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">Photo taken</div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">{{captureDate}}</div>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
     </div>
 </div>
